# TREC26_RAG_GLHF

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: autoresearch.yml  baseline-smoke.yml  gpu-runner-smoke.yml  propose-next-experiment.yml  run-rag-baseline.yml  run-retrieval-baseline.yml
configs/: autoresearch.yaml  baseline_rag.yaml  baseline_retrieval.yaml
configs/experiments/: 20260621_065902_title_narrative_top100.yaml  20260621_071511_title_boosted_narrative_top100.yaml  20260622_180923_title_narrative_top100.yaml  20260629_164922_title_boosted_narrative_top100.yaml
data/: README.md
data/qrels/: README.md
scripts/: autoresearch.py  evaluate_retrieval_run.py  prepare_dev_topics.py  propose_next_experiment.py  run_rag_baseline.py  run_retrieval_baseline.py  validate_rag_output.py  validate_retrieval_run.py
src/trec26_rag/: __init__.py  autoresearch.py  config.py  evaluation.py  experiment_optimizer.py  generator.py  pyserini_client.py  rag_output.py  rag_validation.py  rag_viewer.py  runfile.py  topics.py  wandb_logging.py
tests/: test_autoresearch.py  test_config.py  test_evaluation.py  test_experiment_optimizer.py  test_generator.py  test_pyserini_client.py  test_rag_output.py  test_rag_validation.py  test_rag_viewer.py  test_run_rag_baseline.py  test_runfile.py  test_topics.py  test_wandb_logging.py
