[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trec26-rag-glhf"
version = "0.1.0"
description = "Baseline and experiment automation for team GLHF on TREC RAG 2026."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.31",
  "wandb>=0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
